Fixed Title Box
Title box completed!

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     </head>
     <body>
       <div id="base">
-        <div id="page"></div>
+        <div id="title">
+            <h3>Cowboy Bebop</h3>
+            <h5>See you <i>space cowboy...</i></h5>
+        </div>
       </div>
+     </div>
     </body>
 </html>
