--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
       <div id="base">
         <div id="title">
             <h3>Cowboy Bebop</h3>
-            <h5>See you <i>space cowboy...</i></h5>
-        </div>
+            <h5>See you <i>space cowboy...</i></h5></div>
+            <div class="Links">
+                
+                <a href="https://cowboybebop.fandom.com/wiki/Spike_Spiegel" target="_blank" title="Wiki">Spike</a>
+                <a href="https://cowboybebop.fandom.com/wiki/Faye_Valentine" target="_blank" title="Wiki">Faye</a>
+                <a href="https://cowboybebop.fandom.com/wiki/Jet_Black" target="_blank" title="Wiki">Jet</a>
+                <a href="https://cowboybebop.fandom.com/wiki/Edward" target="_blank" title="Wiki">Edward</a>
+            
+            </div>
       </div>
      </div>
     </body>
