--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
       <div id="base">
         <div id="title">
-            <h3>Cowboy Bebop</h3>
+            <h3 id="Title">Cowboy Bebop</h3>
             <h5>See you <i>space cowboy...</i></h5></div>
             <div class="Links">
                 
@@ -16,8 +16,8 @@
                 <a href="https://cowboybebop.fandom.com/wiki/Faye_Valentine" target="_blank" title="Wiki">Faye</a>
                 <a href="https://cowboybebop.fandom.com/wiki/Jet_Black" target="_blank" title="Wiki">Jet</a>
                 <a href="https://cowboybebop.fandom.com/wiki/Edward" target="_blank" title="Wiki">Edward</a>
-            
             </div>
+            <h2>Cowboy Bebop</h2>
       </div>
      </div>
     </body>
