--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="https://cowboybebop.fandom.com/wiki/Edward" target="_blank" title="Wiki">Edward</a>
             </div>
             <h2>Cowboy Bebop</h2>
+            <div id="image"></div>
       </div>
      </div>
     </body>
