Fixade lite dålig kod
fixade body koden så jag inte behövde ha text align center i den, trial and error...

--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
     </head>
     <body>
       <div id="base">
-        <div id="title">
+        <div id="titlebox">
             <h3 id="Title">Cowboy Bebop</h3>
             <h5>See you <i>space cowboy...</i></h5></div>
-            <div class="Links">
+            <div id="Links">
                 
                 <a href="https://cowboybebop.fandom.com/wiki/Spike_Spiegel" target="_blank" title="Wiki">Spike</a>
                 <a href="https://cowboybebop.fandom.com/wiki/Faye_Valentine" target="_blank" title="Wiki">Faye</a>
                 <a href="https://cowboybebop.fandom.com/wiki/Jet_Black" target="_blank" title="Wiki">Jet</a>
                 <a href="https://cowboybebop.fandom.com/wiki/Edward" target="_blank" title="Wiki">Edward</a>
             </div>
+            <div id="info">
             <h2>Cowboy Bebop</h2>
             <div id="image"></div>
+            </div>
+            <div id="text">
+                <h3>Story</h3>
+
+            </div>
       </div>
      </div>
     </body>
