--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </div>
             <div id="text">
                 <h3>Story</h3>
+                <p>Japanese animated television series, movie and other media created by Shinichiro Watanabe. Set in 2071 and centered on the adventures of a gang of bounty hunters in space, the story delves into the unresolved issues of the protagonists' past, exploring concepts such as existentialism, boredom, loneliness, and the influence of the past. </p>
                 
 
             </div>
