--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
             <div id="text">
                 <h3>Story</h3>
                 <p>Japanese animated television series, movie and other media created by Shinichiro Watanabe. Set in 2071 and centered on the adventures of a gang of bounty hunters in space, the story delves into the unresolved issues of the protagonists' past, exploring concepts such as existentialism, boredom, loneliness, and the influence of the past. </p>
-                
-
+                <h3>Success</h3>
+                <p>Cowboy Bebop was a critical and commercial success both in Japanese and international markets, most notably in the United States. It garnered several major anime and science-fiction awards upon its release, and received unanimous praise for its style, characters, story, voice acting, animation, and soundtrack.</p>
             </div>
+            <footer>© Cowboy Bebop Enterprise</footer>
       </div>
      </div>
     </body>
